--- a/ify-art/index.html
+++ b/ify-art/index.html
@@ -5,7 +5,13 @@
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Nikoals Ify Art</title>
-    <link rel="shortcut icon" href="" type="image/x-icon">
+    <!-- 
+      --fav-icon- 
+      start -->
+    <link rel="shortcut icon" href="public/images/favicon.svg+xml" type="image/x-icon">
+    <!-- 
+      --google-fonts-import
+    -->
   </head>
   <body>
     <div id="root"></div>
